--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -678,6 +678,11 @@ video {
   border-bottom-width: 1px;
 }
 
+.border-zinc-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(161 161 170 / var(--tw-border-opacity));
+}
+
 .bg-\[\#DAD3CC\] {
   --tw-bg-opacity: 1;
   background-color: rgb(218 211 204 / var(--tw-bg-opacity));
@@ -706,6 +711,11 @@ video {
 .bg-\[\#161311\] {
   --tw-bg-opacity: 1;
   background-color: rgb(22 19 17 / var(--tw-bg-opacity));
+}
+
+.bg-green-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 101 52 / var(--tw-bg-opacity));
 }
 
 .px-2 {
@@ -752,6 +762,10 @@ video {
   line-height: 1rem;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
@@ -759,6 +773,11 @@ video {
 .text-zinc-400 {
   --tw-text-opacity: 1;
   color: rgb(161 161 170 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .shadow-lg {
