--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -773,6 +773,56 @@ video {
   border-color: rgb(161 161 170 / var(--tw-border-opacity));
 }
 
+.border-zinc-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(63 63 70 / var(--tw-border-opacity));
+}
+
+.border-zinc-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(24 24 27 / var(--tw-border-opacity));
+}
+
+.border-r-green-900 {
+  --tw-border-opacity: 1;
+  border-right-color: rgb(20 83 45 / var(--tw-border-opacity));
+}
+
+.border-r-indigo-600 {
+  --tw-border-opacity: 1;
+  border-right-color: rgb(79 70 229 / var(--tw-border-opacity));
+}
+
+.border-t-zinc-700 {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(63 63 70 / var(--tw-border-opacity));
+}
+
+.border-r-indigo-400 {
+  --tw-border-opacity: 1;
+  border-right-color: rgb(129 140 248 / var(--tw-border-opacity));
+}
+
+.border-r-green-400 {
+  --tw-border-opacity: 1;
+  border-right-color: rgb(74 222 128 / var(--tw-border-opacity));
+}
+
+.border-l-green-400 {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(74 222 128 / var(--tw-border-opacity));
+}
+
+.border-r-zinc-400 {
+  --tw-border-opacity: 1;
+  border-right-color: rgb(161 161 170 / var(--tw-border-opacity));
+}
+
+.border-r-zinc-900 {
+  --tw-border-opacity: 1;
+  border-right-color: rgb(24 24 27 / var(--tw-border-opacity));
+}
+
 .bg-\[\#161311\] {
   --tw-bg-opacity: 1;
   background-color: rgb(22 19 17 / var(--tw-bg-opacity));
@@ -876,6 +926,16 @@ video {
 .bg-zinc-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity));
+}
+
+.bg-purple-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
+}
+
+.bg-green-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
 }
 
 .p-2 {
@@ -1022,6 +1082,24 @@ video {
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
