--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -556,6 +556,10 @@ video {
   }
 }
 
+.absolute {
+  position: absolute;
+}
+
 .float-right {
   float: right;
 }
@@ -606,6 +610,14 @@ video {
 
 .ml-10 {
   margin-left: 2.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
 }
 
 .block {
@@ -668,6 +680,50 @@ video {
   width: 100%;
 }
 
+.w-\[\] {
+  width: ;
+}
+
+.w-\[90\%\] {
+  width: 90%;
+}
+
+.w-\[99\%\] {
+  width: 99%;
+}
+
+.w-\[90\] {
+  width: 90;
+}
+
+.w-\[9\%\] {
+  width: 9%;
+}
+
+.w-\[96\%\] {
+  width: 96%;
+}
+
+.w-\[98\%\] {
+  width: 98%;
+}
+
+.w-\[95\%\] {
+  width: 95%;
+}
+
+.w-\[97\%\] {
+  width: 97%;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[94\%\] {
+  width: 94%;
+}
+
 .max-w-\[200px\] {
   max-width: 200px;
 }
@@ -716,6 +772,10 @@ video {
   align-items: center;
 }
 
+.items-baseline {
+  align-items: baseline;
+}
+
 .justify-start {
   justify-content: flex-start;
 }
@@ -738,6 +798,10 @@ video {
 
 .justify-items-end {
   justify-items: end;
+}
+
+.justify-items-center {
+  justify-items: center;
 }
 
 .overflow-auto {
@@ -821,6 +885,16 @@ video {
 .border-r-zinc-900 {
   --tw-border-opacity: 1;
   border-right-color: rgb(24 24 27 / var(--tw-border-opacity));
+}
+
+.border-t-zinc-900 {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(24 24 27 / var(--tw-border-opacity));
+}
+
+.border-t-zinc-400 {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(161 161 170 / var(--tw-border-opacity));
 }
 
 .bg-\[\#161311\] {
@@ -1006,6 +1080,14 @@ video {
   padding-left: 1rem;
 }
 
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1077,6 +1159,16 @@ video {
 .text-green-700 {
   --tw-text-opacity: 1;
   color: rgb(21 128 61 / var(--tw-text-opacity));
+}
+
+.text-zinc-600 {
+  --tw-text-opacity: 1;
+  color: rgb(82 82 91 / var(--tw-text-opacity));
+}
+
+.text-zinc-300 {
+  --tw-text-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-text-opacity));
 }
 
 .shadow-lg {
@@ -1176,6 +1268,10 @@ body {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.focus\:border-none:focus {
+  border-style: none;
 }
 
 
