--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -855,6 +855,10 @@ video {
   justify-items: center;
 }
 
+.justify-items-stretch {
+  justify-items: stretch;
+}
+
 .overflow-auto {
   overflow: auto;
 }
