--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -649,20 +649,12 @@ video {
   height: 100vh;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
 .w-10 {
   width: 2.5rem;
 }
 
 .w-12 {
   width: 3rem;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
 }
 
 .w-\[50\%\] {
@@ -1066,6 +1058,18 @@ body {
   .max-sm\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+}
+
+@media (min-width: 300px) {
+  .min-\[300px\]\:w-full {
+    width: 100%;
+  }
+}
+
+@media (min-width: 640px) {
+  .sm\:w-full {
+    width: 100%;
   }
 }
 
