--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -649,6 +649,10 @@ video {
   height: 100vh;
 }
 
+.w-1\/3 {
+  width: 33.333333%;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -1063,12 +1067,6 @@ body {
 
 @media (min-width: 300px) {
   .min-\[300px\]\:w-full {
-    width: 100%;
-  }
-}
-
-@media (min-width: 640px) {
-  .sm\:w-full {
     width: 100%;
   }
 }
