--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -667,6 +667,22 @@ video {
   height: 100vh;
 }
 
+.h-32 {
+  height: 8rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
 .w-1\/3 {
   width: 33.333333%;
 }
