--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -647,6 +647,14 @@ video {
   margin-top: -128px;
 }
 
+.ml-5 {
+  margin-left: 1.25rem;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
 .block {
   display: block;
 }
